--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,25 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang='es'>
 <head>
-  <meta charset="utf-8">
+  <meta charset='utf-8' />
   <title>Moontech</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <base href='/' />
+  <meta content='width=device-width, initial-scale=1' name='viewport' />
+  <link href='favicon.ico' rel='icon' type='image/x-icon' />
+  <link
+    crossorigin='anonymous'
+    href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css'
+    integrity='sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD'
+    rel='stylesheet'
+  />
+  <script
+    crossorigin='anonymous'
+    defer
+    integrity='sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN'
+    src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js'
+  ></script>
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
